--- a/HTML/home.html
+++ b/HTML/home.html
@@ -13,10 +13,16 @@
                     <img src="" class="logo">
                     <ul>
                         <li><a href="TextFormating.html">TextFormating</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Portifolio</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="hyperlinks.html">Hyperlinks (Take On Me Song)</a></li>
+                        <li><a href="images.html">Images (Dogs)</a></li>
+                        <li><a href="audio.html">Audio</a></li>
+                        <li><a href="#"> </a></li>
+                        <li><a href="#"> </a></li>
+                        <li><a href="#"> </a></li>
+                        <li><a href="#"> </a></li>
+                        <li><a href="#"> </a></li>
+                        <li><a href="#"> </a></li>
+                        <li><a href="#"> </a></li>
                     </ul>
                 </nav>
         </div>
