--- a/HTML/home.html
+++ b/HTML/home.html
@@ -16,7 +16,7 @@
                         <li><a href="hyperlinks.html">Hyperlinks (Take On Me Song)</a></li>
                         <li><a href="images.html">Images (Dogs)</a></li>
                         <li><a href="audio.html">Audio</a></li>
-                        <li><a href="#"> </a></li>
+                        <li><a href="video.html">Video</a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
