--- a/HTML/home.html
+++ b/HTML/home.html
@@ -17,7 +17,7 @@
                         <li><a href="images.html">Images (Dogs)</a></li>
                         <li><a href="audio.html">Audio</a></li>
                         <li><a href="video.html">Video</a></li>
-                        <li><a href="#"> </a></li>
+                        <li><a href="favicons.html">Favicons</a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
