span & div + home
adding span & div and formatting home

--- a/HTML/TextFormating.html
+++ b/HTML/TextFormating.html
@@ -16,6 +16,6 @@
     <p>This is a <sub>subscript</sub> text</p>
     <p>This is a <tt>monospaced</tt> text</p>
     <p>This is a <mark style="background-color: lightgreen;">mark</mark> text</p>
-    <a href="home.html">Home</a>
+    <a href="home.html">HOME</a>
 </body>
 </html>
