--- a/HTML/audio.html
+++ b/HTML/audio.html
@@ -23,6 +23,6 @@
       <source src="audio/Beethoven - Für Elise.mp3">
   </audio>
   <br>
-  <a href="home.html">home</a>
+  <a href="home.html">HOME</a>
 </body>
 </html>
