--- a/HTML/images.html
+++ b/HTML/images.html
@@ -13,6 +13,6 @@
   <br>
   <img src="images/dog_smiling.png" alt="smiling dog picture" height="250">
   <h3>Smile!</h3>
-  <a href="home.html">home</a>
+  <a href="home.html">HOME</a>
 </body>
 </html>
