--- a/HTML/home.html
+++ b/HTML/home.html
@@ -18,7 +18,7 @@
                         <li><a href="audio.html">Audio</a></li>
                         <li><a href="video.html">Video</a></li>
                         <li><a href="favicons.html">Favicons</a></li>
-                        <li><a href="#"> </a></li>
+                        <li><a href="spanediv.html">Span & Div</a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
