--- a/HTML/spanediv.html
+++ b/HTML/spanediv.html
@@ -6,8 +6,17 @@
   <title>Span & Div</title>
 </head>
 <body>
-  <h1><span>This is a span title</span></h1>
-  <h1>This is a div titile</h1>
+  <!-- Group Together HTML -->
+  <!-- <span> inline container to group elements for styling purposes-->
+  <!-- <div> block container to group elements for styling purposes-->
+  <h1><span style="background-color: tomato;">This is a span title</span></h1>
+  <h1><div style="background-color: cyan;">This is a div titile</div></h1>
+
+  <p><span style="background-color: tomato;">this is a span sentence.</span></p>
+  <p><div style="background-color: cyan;">this is a div sentence.</div></p>
+
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<span style="background-color: tomato;"> Rem dolorum minus architecto nobis labore aperiam ex accusamus iure qui? Suscipit porro laboriosam minima.</span> Ducimus explicabo necessitatibus voluptate esse corporis? A.</p>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.<div style="background-color: cyan;"> Nihil repellat fuga illo nobis, nostrum placeat, dolorem velit culpa laudantium quam dolore facere esse? Consectetur consequuntur vel facere iure nihil quos?</div></p>
   <a href="home.html">HOME</a>
 </body>
 </html>
