--- a/HTML/home.html
+++ b/HTML/home.html
@@ -19,7 +19,7 @@
                         <li><a href="video.html">Video</a></li>
                         <li><a href="favicons.html">Favicons</a></li>
                         <li><a href="spanediv.html">Span & Div</a></li>
-                        <li><a href="#"> </a></li>
+                        <li><a href="lists.html">Lists</a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
