--- a/HTML/lists.html
+++ b/HTML/lists.html
@@ -32,7 +32,7 @@
 
 <!-- Description List -->
 <h4>Mythical Creatures</h4>
-<dl style="background-color: lightgreen; border:2px solid"</dl>>
+<dl style="background-color: lightgreen; border:2px solid">
   <dt>dragon</dt>
   <dd>Dragão é um animal que é representado com cauda de serpente, garras e asas.</dd>
   <dt>phoenix</dt>
