--- a/HTML/home.html
+++ b/HTML/home.html
@@ -20,7 +20,7 @@
                         <li><a href="favicons.html">Favicons</a></li>
                         <li><a href="spanediv.html">Span & Div</a></li>
                         <li><a href="lists.html">Lists</a></li>
-                        <li><a href="#"> </a></li>
+                        <li><a href="table.html">Table</a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
