--- a/HTML/home.html
+++ b/HTML/home.html
@@ -22,7 +22,7 @@
                         <li><a href="lists.html">Lists</a></li>
                         <li><a href="table.html">Table</a></li>
                         <li><a href="buttons.html">Buttons</a></li>
-                        <li><a href="#"> </a></li>
+                        <li><a href="forms.html">Forms</a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
