--- a/HTML/forms.html
+++ b/HTML/forms.html
@@ -53,9 +53,9 @@
     <input type="file" id="file" accept="image/png, image/jpg"><br>
 
     <input type="reset"><br>
-    <input type="submit" required><br>
+    <input type="submit" required><br><br>
     
-
+  <a href="home.html">HOME</a>
   </form>
   
 </body>
