--- a/HTML/home.html
+++ b/HTML/home.html
@@ -23,7 +23,7 @@
                         <li><a href="table.html">Table</a></li>
                         <li><a href="buttons.html">Buttons</a></li>
                         <li><a href="forms.html">Forms</a></li>
-                        <li><a href="#"> </a></li>
+                        <li><a href="headersefooters.html">Headers & Footers</a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
