colors and fonts
colors and fonts

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -25,8 +25,8 @@
                         <li><a href="forms.html">Forms</a></li>
                         <li><a href="headersefooters.html">Headers & Footers</a></li>
                         <li><a href="/CSS/introductioncss.html">Introduction Css</a></li>
-                        <li><a href="#"> </a></li>
-                        <li><a href="#"> </a></li>
+                        <li><a href="/CSS/colors.html">Colors</a></li>
+                        <li><a href="/CSS/fonts.html">Fonts</a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
