--- a/CSS/colors.html
+++ b/CSS/colors.html
@@ -3,14 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Css Introduction</title>
-  <link rel="stylesheet" href="introductioncss.css">
+  <title>Colors</title>
+  <link rel="stylesheet" href="colors.css">
 </head>
 <body>
-  <!-- Inline, Internal, External -->
-
-  <h1>This is my Website</h1>
-
   <p id="p1" class="odd">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus facilis qui iusto temporibus ipsa nisi ut consequuntur sed, esse, mollitia repellat accusantium distinctio odio provident molestias vitae fugiat repellendus aut?</p>
   <p id="p2" class="even">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus facilis qui iusto temporibus ipsa nisi ut consequuntur sed, esse, mollitia repellat accusantium distinctio odio provident molestias vitae fugiat repellendus aut?</p>
   <p id="p3" class="odd">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus facilis qui iusto temporibus ipsa nisi ut consequuntur sed, esse, mollitia repellat accusantium distinctio odio provident molestias vitae fugiat repellendus aut?</p>
