--- a/HTML/home.html
+++ b/HTML/home.html
@@ -27,7 +27,7 @@
                         <li><a href="/CSS/introductioncss.html">Introduction Css</a></li>
                         <li><a href="/CSS/colors.html">Colors</a></li>
                         <li><a href="/CSS/fonts.html">Fonts</a></li>
-                        <li><a href="#"> </a></li>
+                        <li><a href="/CSS/borders.html">Borders</a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
