--- a/HTML/home.html
+++ b/HTML/home.html
@@ -28,8 +28,8 @@
                         <li><a href="/CSS/colors.html">Colors</a></li>
                         <li><a href="/CSS/fonts.html">Fonts</a></li>
                         <li><a href="/CSS/borders.html">Borders</a></li>
-                        <li><a href="#"> </a></li>
-                        <li><a href="#"> </a></li>
+                        <li><a href="/CSS/shadows.html">Shadows</a></li>
+                        <li><a href="/CSS/margins.html">Margins</a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
