--- a/HTML/home.html
+++ b/HTML/home.html
@@ -30,7 +30,7 @@
                         <li><a href="/CSS/borders.html">Borders</a></li>
                         <li><a href="/CSS/shadows.html">Shadows</a></li>
                         <li><a href="/CSS/margins.html">Margins</a></li>
-                        <li><a href="#"> </a></li>
+                        <li><a href="/CSS/float.html">Float</a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
