float and overflow
float and overflow and changing the images, audio and video out of html folder.

--- a/CSS/float.html
+++ b/CSS/float.html
@@ -9,11 +9,16 @@
 <body>
   <!-- float = allows other elements to flow arround it -->
 
-  <div id="box1" class="box"></div>
+  <img src="/images/pokeball.png" height="150px" alt="pokeball" id="img1">
 
   <p>Lorem ipsum daolor sit amet consectetur adipisicing elit. Excepturi dolore, soluta recusandae aut, dolorum sequi vero impedit doloremque ullam delectus at assumenda fugiat! Praesentium voluptates, eum incidunt eos quas harum.</p>
   <p>Lorem ipsum daolor sit amet consectetur adipisicing elit. Excepturi dolore, soluta recusandae aut, dolorum sequi vero impedit doloremque ullam delectus at assumenda fugiat! Praesentium voluptates, eum incidunt eos quas harum.</p>
+  
+  <img src="/images/pikachu.png" height="150px" alt="pikachu" id="img2">
+
+  <p>Lorem ipsum daolor sit amet consectetur adipisicing elit. Excepturi dolore, soluta recusandae aut, dolorum sequi vero impedit doloremque ullam delectus at assumenda fugiat! Praesentium voluptates, eum incidunt eos quas harum.</p>
   <p>Lorem ipsum daolor sit amet consectetur adipisicing elit. Excepturi dolore, soluta recusandae aut, dolorum sequi vero impedit doloremque ullam delectus at assumenda fugiat! Praesentium voluptates, eum incidunt eos quas harum.</p>
 
+  <a href="/HTML/home.html">HOME</a>
 </body>
 </html>
