--- a/HTML/home.html
+++ b/HTML/home.html
@@ -32,8 +32,8 @@
                         <li><a href="/CSS/margins.html">Margins</a></li>
                         <li><a href="/CSS/float.html">Float</a></li>
                         <li><a href="/CSS/overflow.html">Overflow</a></li>
-                        <li><a href="#"> </a></li>
-                        <li><a href="#"> </a></li>
+                        <li><a href="/CSS/displayproperty.html">Display</a></li>
+                        <li><a href="/CSS/heightwidht.html">Height and Width</a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
