--- a/HTML/home.html
+++ b/HTML/home.html
@@ -34,8 +34,8 @@
                         <li><a href="/CSS/overflow.html">Overflow</a></li>
                         <li><a href="/CSS/displayproperty.html">Display</a></li>
                         <li><a href="/CSS/heightwidht.html">Height and Width</a></li>
-                        <li><a href="#"> </a></li>
-                        <li><a href="#"> </a></li>
+                        <li><a href="/CSS/position.html">Position</a></li>
+                        <li><a href="/CSS/backgroundimage.html">Background Image</a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
