--- a/HTML/home.html
+++ b/HTML/home.html
@@ -36,7 +36,7 @@
                         <li><a href="/CSS/heightwidht.html">Height and Width</a></li>
                         <li><a href="/CSS/position.html">Position</a></li>
                         <li><a href="/CSS/backgroundimage.html">Background Image</a></li>
-                        <li><a href="#"> </a></li>
+                        <li><a href="/CSS/combinators.html"">Combinators</a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
