--- a/HTML/home.html
+++ b/HTML/home.html
@@ -38,9 +38,8 @@
                         <li><a href="/CSS/backgroundimage.html">Background Image</a></li>
                         <li><a href="/CSS/combinators.html"">Combinators</a></li>
                         <li><a href="/CSS/pseudoclasses.html">Pseudo-Classes</a></li>
-                        <li><a href="/CSS/pseudoelements.html">Pseuudo-Elements</a></li>
-                        <li><a href="#"> </a></li>
-                        <li><a href="#"> </a></li>
+                        <li><a href="/CSS/pseudoelements.html">Pseudo-Elements</a></li>
+                        <li><a href="/CSS/pagination.html">Pagination</a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
