--- a/HTML/home.html
+++ b/HTML/home.html
@@ -42,7 +42,7 @@
                         <li><a href="/CSS/pagination.html">Pagination</a></li>
                         <li><a href="/CSS/dropdownmenus.html">Dropdown Menus</a></li>
                         <li><a href="/CSS/navigationbar.html">Navigation Bar</a></li>
-                        <li><a href="#"> </a></li>
+                        <li><a href="/CSS/websitelayout.html">Website Layout</a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
