--- a/CSS/navigationbar.html
+++ b/CSS/navigationbar.html
@@ -12,7 +12,7 @@
 
   <nav class="navbar">
     <ul>
-      <li><a href="">Home</a></li>
+      <li><a href="/HTML/home.html">Home</a></li>
       <li><a href="">About</a></li>
       <li><a href="">Products</a></li>
       <li><a href="">Contact</a></li>
@@ -22,6 +22,7 @@
     <h3>This is the Home page</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quaerat sunt totam dicta minus culpa voluptatem, maxime, nemo necessitatibus aliquam exercitationem, repellendus eveniet velit quam maiores. Suscipit odio assumenda tempore?</p>
   </main>
+
 
 </body>
 </html>
