--- a/HTML/home.html
+++ b/HTML/home.html
@@ -43,7 +43,7 @@
                         <li><a href="/CSS/dropdownmenus.html">Dropdown Menus</a></li>
                         <li><a href="/CSS/navigationbar.html">Navigation Bar</a></li>
                         <li><a href="/CSS/websitelayout.html">Website Layout</a></li>
-                        <li><a href="#"> </a></li>
+                        <li><a href="/CSS/imagegallery.html">Image Gallery</a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
