--- a/HTML/home.html
+++ b/HTML/home.html
@@ -45,7 +45,7 @@
                         <li><a href="/CSS/websitelayout.html">Website Layout</a></li>
                         <li><a href="/CSS/imagegallery.html">Image Gallery</a></li>
                         <li><a href="/CSS/icons.html">Icons</a></li>
-                        <li><a href="#"> </a></li>
+                        <li><a href="/CSS/flexbox.html">Flexbox</a></li>
                         <li><a href="#"> </a></li>
                         <li><a href="#"> </a></li>
                     </ol>
