--- a/HTML/home.html
+++ b/HTML/home.html
@@ -47,7 +47,7 @@
                         <li><a href="/CSS/icons.html">Icons</a></li>
                         <li><a href="/CSS/flexbox.html">Flexbox</a></li>
                         <li><a href="/CSS/transformations.html">Transformations</a></li>
-                        <li><a href="#"> </a></li>
+                        <li><a href="/CSS/animations.html">Animations</a></li>
                     </ol>
                 </nav>
         </div>
