--- a/JavaScript/home.html
+++ b/JavaScript/home.html
@@ -12,8 +12,8 @@
                 <nav>
                     <img src="" class="logo">
                     <ol>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
+                        <li><a href="Variables/index.html">Variables</a></li>
+                        <li><a href="Arithmetic Operators/index.html">Arithmetic Operators</a></li>
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
