--- a/JavaScript/Arithmetic Operators/index.html
+++ b/JavaScript/Arithmetic Operators/index.html
@@ -3,16 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Variables</title>
+  <title>Arithmetic Operators</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  
 
-  <p id="p1"></p>
-  <p id="p2"></p>
-  <p id="p3"></p>
 
-  <a href="/JavaScript/home.html">Home</a>
   <script src="index.js"></script>
 </body>
 </html>
