--- a/JavaScript/Accept User Input/index.html
+++ b/JavaScript/Accept User Input/index.html
@@ -3,13 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Arithmetic Operators</title>
+  <title>ACcept User Input</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <h1 id="myh1">Welcome</h1>
 
-  <a href="/JavaScript/home.html">HOME</a>
+  <label for="myText">Username:</label>
+  <input id="myText">
+  <button id="mySubmit">submit</button>
+    
+
   <script src="index.js"></script>
 </body>
 </html>
