--- a/JavaScript/Type Conversion/index.html
+++ b/JavaScript/Type Conversion/index.html
@@ -3,19 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ACcept User Input</title>
+  <title>Type Conversion</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1 id="myh1">Welcome</h1>
+  
 
-  <label for="myText">Username:</label>
-  <input id="myText">
-  <button id="mySubmit">submit</button>
-  
-  
-  <br>
-  <a href="/JavaScript/home.html">Home</a>
+
   <script src="index.js"></script>
 </body>
 </html>
