--- a/JavaScript/home.html
+++ b/JavaScript/home.html
@@ -15,7 +15,7 @@
                         <li><a href="Variables/index.html">Variables</a></li>
                         <li><a href="Arithmetic Operators/index.html">Arithmetic Operators</a></li>
                         <li><a href="Accept User input/index.html">Accept User Input</a></li>
-                        <li><a href=""></a></li>
+                        <li><a href="Type Conversion/index.html">Type Conversion</a></li>
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
