--- a/JavaScript/home.html
+++ b/JavaScript/home.html
@@ -16,7 +16,7 @@
                         <li><a href="Arithmetic Operators/index.html">Arithmetic Operators</a></li>
                         <li><a href="Accept User input/index.html">Accept User Input</a></li>
                         <li><a href="Type Conversion/index.html">Type Conversion</a></li>
-                        <li><a href=""></a></li>
+                        <li><a href="Constants/index.html">Constants</a></li>
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
