--- a/JavaScript/Counter Program/index.html
+++ b/JavaScript/Counter Program/index.html
@@ -11,7 +11,8 @@
   <div id="btnContainer">
     <button id="decreaseBtn" class="buttons">Decrease</button>
     <button id="resetBtn" class="buttons">Reset</button>
-    <button id="increaseBtn" class="buttons">Increase</button>
+    <button id="increaseBtn" class="buttons">Increase</button><br><br>
+    <a href="/JavaScript/home.html"><button id="home" class="buttons">HOME</button></a>
   </div>
 
   <script src="index.js"></script>
