--- a/JavaScript/home.html
+++ b/JavaScript/home.html
@@ -17,8 +17,8 @@
                         <li><a href="Accept User input/index.html">Accept User Input</a></li>
                         <li><a href="Type Conversion/index.html">Type Conversion</a></li>
                         <li><a href="Constants/index.html">Constants</a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
+                        <li><a href="Counter Program/index.html">Counter Program</a></li>
+                        <li><a href="Math Object/index.html">Math Object</a></li>
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
