--- a/JavaScript/home.html
+++ b/JavaScript/home.html
@@ -19,7 +19,7 @@
                         <li><a href="Constants/index.html">Constants</a></li>
                         <li><a href="Counter Program/index.html">Counter Program</a></li>
                         <li><a href="Math Object/index.html">Math Object</a></li>
-                        <li><a href=""></a></li>
+                        <li><a href="Random Number Generator/">Random Number Generator</a></li>
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
