--- a/JavaScript/Random Number Generator/index.html
+++ b/JavaScript/Random Number Generator/index.html
@@ -12,7 +12,7 @@
   <label id="label2" class="myLabels"></label><br>
   <label id="label3" class="myLabels"></label><br>
 
-
+  <a href="/JavaScript/home.html">Home</a>
 
 
 
