--- a/JavaScript/home.html
+++ b/JavaScript/home.html
@@ -19,8 +19,8 @@
                         <li><a href="Constants/index.html">Constants</a></li>
                         <li><a href="Counter Program/index.html">Counter Program</a></li>
                         <li><a href="Math Object/index.html">Math Object</a></li>
-                        <li><a href="Random Number Generator/">Random Number Generator</a></li>
-                        <li><a href=""></a></li>
+                        <li><a href="Random Number Generator/index.html">Random Number Generator</a></li>
+                        <li><a href="If Statements/index.html">If Statements</a></li>
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
