--- a/JavaScript/home.html
+++ b/JavaScript/home.html
@@ -21,7 +21,7 @@
                         <li><a href="Math Object/index.html">Math Object</a></li>
                         <li><a href="Random Number Generator/index.html">Random Number Generator</a></li>
                         <li><a href="If Statements/index.html">If Statements</a></li>
-                        <li><a href=""></a></li>
+                        <li><a href="Checked Property/index.html">Checked Property</a></li>
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
