--- a/JavaScript/home.html
+++ b/JavaScript/home.html
@@ -23,7 +23,7 @@
                         <li><a href="If Statements/index.html">If Statements</a></li>
                         <li><a href="Checked Property/index.html">Checked Property</a></li>
                         <li><a href="Switches/index.html">Switches</a></li>
-                        <li><a href=""></a></li>
+                        <li><a href="Strings Methods/">String Methods</a></li>
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
