--- a/JavaScript/home.html
+++ b/JavaScript/home.html
@@ -31,7 +31,7 @@
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
                         <li><a href="Number Guessing Game/index.html">Number Guessing Game</a></li>
-                        <li><a href=""></a></li>
+                        <li><a href="Random Number Generator/index.html">Number Number Generator</a></li>
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
