--- a/JavaScript/Add and Change html elements/index.html
+++ b/JavaScript/Add and Change html elements/index.html
@@ -8,6 +8,19 @@
 </head>
 <body>
 
+    <div id="box1" class="box">
+        <p>Box1</p>
+    </div>
+    <div id="box2" class="box">
+        <p>Box2</p>
+    </div>
+    <div id="box3" class="box">
+        <p>Box3</p>
+    </div>
+    <div id="box4" class="box">
+        <p>Box4</p>
+    </div>
+
 <script src="index.js"></script>
 </body>
 </html>
